@@ -1,8 +1,9 @@
-// $Id: CHANGELOG.txt,v 1.155 2010/09/08 20:50:51 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.156 2010/09/09 16:10:41 alexb Exp $
 
 Feeds 6.x 1.0 XXXXXXXXXXXXXXXXXX
 --------------------------------
 
+- #906720 alex_b: Introduce a hook_feeds_after_clear().
 - #905820 tristan.oneil: Adjust delete message in FeedsDataProcessor to avoid
   misleading total numbers.
 - #671538 mburak: Use CURLOPT_TIMEOUT to limit download time of feeds.
